# category-theory-experiment

./: .gitignore  README.md  categorical-lab.cabal
app/: Main.hs
src/CategoryTheory/: Core.hs  Free.hs  Functorial.hs  Kleisli.hs  Small.hs
