cabal-version:      2.4
name:               categorical-lab
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    README.md
synopsis:           Experimental category theory playground in Haskell
category:           Math

author:             OpenAI
maintainer:         you@example.com

common warnings
  ghc-options: -Wall
  default-language: Haskell2010

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
      CategoryTheory.Core
      CategoryTheory.Small
      CategoryTheory.Free
      CategoryTheory.Functorial
      CategoryTheory.Kleisli
  build-depends:
      base >=4.14 && <5,
      containers >=0.6 && <0.8

executable categorical-lab-demo
  import:           warnings
  hs-source-dirs:   app, src
  main-is:          Main.hs
  build-depends:
      base >=4.14 && <5,
      containers >=0.6 && <0.8,
      categorical-lab
